# blogcode

./: CMakeLists.txt
CMakeModules/: FindOpenCL.cmake
HighResClock/: CMakeLists.txt  HighResClock.cpp  HighResClock.hpp
pi/: CMakeLists.txt  Makefile  cl_helpers.hpp  pi.cpp  pi_coalesced_memory.cl  pi_float4.cl  pi_gpu_reduction.cl  pi_initial.cl
